sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:65: error: not found: value sens
    deplace(mod(currBase+sens, nbBases), 0);
                         ^